# codex8-gpt

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  config.yaml  install.sh  pyproject.toml
_upstream/: config.yaml
_upstream/delapan/: __init__.py
_upstream/delapan/api/: deps.py  health.py  main.py  routes_explore.py  routes_findings.py  routes_kg.py  routes_projects.py
_upstream/delapan/core/: config.py
_upstream/delapan/mcp/: __init__.py  banner.py  server.py  tenancy.py
_upstream/delapan/store/: __init__.py  base.py  sqlite.py  supabase.py
_upstream/skills/explore/: SKILL.md
_upstream/skills/projects/: SKILL.md
_upstream/skills/resume/: SKILL.md
_upstream/skills/search/: SKILL.md
codex8/: __init__.py
codex8/core/: config.py
codex8/core/agent/: concept_doc.py  preamble.py  synopsis.py
codex8/core/clients/: embeddings.py  openai_client.py  research.py
codex8/core/exploration/: __init__.py  deepen.py  engine.py  evaluator.py  extractor.py  merger.py  narrator.py  planner.py
codex8/core/knowledge_graph/: __init__.py  builder.py  extractor.py  models.py  (+2 more)
codex8/mcp/: __init__.py  banner.py  server.py  tenancy.py
codex8/store/: __init__.py  base.py  sqlite.py
docs/: CODEX-SESSION.md  PLAN.md
scripts/: smoke_research.py
skills/explore/: SKILL.md
skills/projects/: SKILL.md
skills/resume/: SKILL.md
skills/search/: SKILL.md
tests/: conftest.py  test_agent.py  test_clients.py  test_config.py  test_exploration.py  test_knowledge_graph.py  test_mcp_server.py  test_plugin_shell.py  test_research.py  test_store.py
(+25 files in other folders)
